chore: Apply some suggestions from the Artemis Mini profile
This should fix an actual bug in ChatHandler where the comparison between a holder and a normal object was wrong. Other than that, these are mostly Java 21 changes.